--- a/package.json
+++ b/package.json
@@ -6,17 +6,23 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "prod": "next build && next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
+    "@supabase/supabase-js": "^2.75.1",
+    "date-fns": "^4.1.0",
+    "next": "14.2.33",
+    "next-auth": "^5.0.0-beta.29",
     "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.33"
+    "react-day-picker": "^9.11.1",
+    "react-dom": "^18"
   },
   "devDependencies": {
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
     "eslint": "^8",
-    "eslint-config-next": "14.2.33"
+    "eslint-config-next": "14.2.33",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1"
   }
 }
